--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,16 @@
 <div class="main">
     <div class="header">
-        <app-navbar></app-navbar>    
+        <app-navbar></app-navbar>      
     </div>
     <div class="sidebar">
         <app-sidebar></app-sidebar>
     </div>
-    <router-outlet></router-outlet>
+    <div class="content">
+        <router-outlet></router-outlet>
+
+   
     <div class="footer">
         <app-footer></app-footer>
     </div>
+</div>
 </div>
