--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,12 +5,12 @@
     <div class="sidebar">
         <app-sidebar></app-sidebar>
     </div>
-    <div class="content">
+    <div class="content" style="    margin-top: 48px;">
         <router-outlet></router-outlet>
-
+    </div>
    
     <div class="footer">
         <app-footer></app-footer>
     </div>
-</div>
+
 </div>
