--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <div class="header">
-    <h1>Header</h1>
+
+  <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar"> <p  style="    margin-top: 26px;
+  margin-right: 33px; font-size: 18px;">{{dara.email}}</p>
+  
 
   </div>
