--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -3,7 +3,15 @@
  
   </head>
   <body><div class="area"></div><nav class="main-menu">
-            <ul>
+
+    <div class="user-pic" style="color:#fff; ">
+       <p style="    MARGIN-LEFT: 50px;
+       FONT-SIZE: 22PX;
+   ">LOGO</p>
+      </div>
+      <hr style="MARGIN-TOP: 35px;">
+            <ul style="margin-top: 18X;">
+                
                 <li>
                     <a >
                         <i class="fa fa-home fa-2x"></i>
@@ -14,7 +22,7 @@
                   
                 </li>
                 <li class="has-subnav">
-                    <a href="#">
+                    <a href="dashboard/table">
                         <i class="fa fa-laptop fa-2x"></i>
                         <span class="nav-text">
                             Stars Components
