--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -7,16 +7,16 @@
 			<div class="d-grid forms23-grids">
 					<div class="form23">
 						<div class="main-bg">
-							<h6 class="sec-one">Workspace</h6>
+							<h6 class="sec-one">Sign Up</h6>
 							<div class="speci-login first-look">
 								<img src="../../assets/images/user.png" alt="" class="img-responsive">
 							</div>
 						</div>
 						<div class="bottom-content">
 							<form action="#" method="post">
-								<input type="text" name="username" class="input-form" placeholder="username"
+								<input type="text" name="displayname" class="input-form" placeholder="username"
                                         required="required" #displaname/>
-                                        <input type="email"  class="input-form" placeholder="user Email"
+                                        <input type="email" name="username"  class="input-form" placeholder="user Email"
 										required="required" #userEmail />
 								<input type="password"  class="input-form"
 										placeholder="Your Password" required="required" #userPwd />
