--- a/src/app/dashboard/footer/footer.component.css
+++ b/src/app/dashboard/footer/footer.component.css
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color:#1abc9c;
-    color: white;
+    background-color: #ffffff;
+    color: #000;
     text-align: center;
 }
