--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 			<div class="d-grid forms23-grids">
 					<div class="form23">
 						<div class="main-bg">
-							<h6 class="sec-one">Workspace</h6>
+							<h6 class="sec-one">Sign In</h6>
 							<div class="speci-login first-look">
 								<img src="../../assets/images/user.png" alt="" class="img-responsive">
 							</div>
